# LuaPractice

./: .gitignore  LuaPractice.lsln
LuaPractice/: LuaPractice.luaproj
src/: closure..lua  co.lua  co2.lua  iterator.lua  main.lua
src/CAPI/: CMakeLists.txt  func.lua  main.c  printf.lua
src/CAPI/LuaEmbeding/: func.lua
src/CAPI/LuaEmbeding/LuaEmbeding/lua-5.2.3/src/: CMakeLists.txt
src/DEBUGs/: co.lua  hook.lua  inspector.lua  lib.lua  main.lua  profiler.lua  traceback.lua
src/IOs/: encoding.lua  fileSize.lua  hexContent.lua  main.lua  wordCount.lua
src/JIT/: main.lua  trinary.lua
src/OO/: inheritance.lua  main.lua  multiinherits.lua  object.lua  selftable.lua  singleton.lua
src/OSs/: main.lua  sleep.lua  timeUtils.lua
src/ds/: bag.lua  buffer.lua  graph.lua  linkedlist.lua  main.lua  main.lua~  set.lua  util.lua
src/global/: debugInfo.lua  detection.lua  main.lua  reg.lua  strict.lua
src/math/: main.lua  weighingRand.lua
src/maths/: main.lua  weighingRand.lua
src/meta/: main.lua  object.lua  readOnly.lua  set.lua  track.lua  window.lua
src/miscellaneous/: farmAnimals.lua  main.lua  primeNumber.lua
src/obsolete/: co.lua  co3.lua  iterator.lua  lib.lua  main.lua  ternary.lua
src/platform/: main.lua  os_detection.lua
src/sample/: lib.lua  main.lua  win.lua
src/socket/: osx.lua  win.lua  win2.lua  win3.lua
src/storage/: data  main.lua
src/strings/: hexExtractor.lua  linkExtractor.lua  main.lua  moss.lua  printPine.lua  tabExpansion.lua  urlUtils.lua  xmlFormatter.lua
src/weakref/: defaults.lua  keyGC.lua  main.lua  valueGC.lua
(+14 files in other folders)
